--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode7.3
-language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+osx_image: xcode10.1
+language: swift
+cache: cocoapods
+podfile: Podfile/Podfile
+before_install:
+- gem install cocoapods # Since Travis is not always on latest version
+- pod install --project-directory=GradualEffect
 script:
 - set -o pipefail && xcodebuild test -workspace Example/GradualEffect.xcworkspace -scheme GradualEffect-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
