--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/GradualEffect.xcworkspace -scheme GradualEffect-Example -sdk iphonesimulator12.1 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+- set -o pipefail && xcodebuild build -workspace Example/GradualEffect.xcworkspace -scheme GradualEffect-Example -sdk iphonesimulator12.1 ONLY_ACTIVE_ARCH=NO | xcpretty
+- pod lib lint --allow-warnings
